Fix unaligned image with on trails

--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ input[type=submit] {
     width: 800px;
     height: 20vw;
     min-height: 200px;
-    min-width: 200px;
+    min-width: 40%;
     max-height: 450px;
   }
 
